--- a/page.hbs
+++ b/page.hbs
@@ -44,6 +44,7 @@ into the {body} of the default.hbs template --}}
             <section class="post-full-content">
                 <div class="post-content">
                     {{content}}
+                    {{{block "form-area"}}}
                 </div>
             </section>
 
