--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -21,16 +21,16 @@
             {{navigation type="secondary"}}
         {{else}}
             <div class="social-links">
-                <a class="social-link social-link-new" href="https://www.linkedin.com/in/niharaparikh/" title="LinkedIn" target="_blank" rel="noopener">{{> "icons/linkedin"}}</a>
-                <a class="social-link social-link-new" href="https://github.com/niharparikh" title="GitHub" target="_blank" rel="noopener">{{> "icons/github"}}</a>
                 {{#if @site.facebook}}
-                    <a class="social-link social-link-fb" href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
+                     <a class="social-link social-link-fb" href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
                 {{/if}}
                 {{#if @site.twitter}}
-                    <a class="social-link social-link-tw" href="{{twitter_url @site.twitter}}" title="Twitter" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
+                     <a class="social-link social-link-tw" href="{{twitter_url @site.twitter}}" title="Twitter" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
                 {{/if}}
             </div>
-            <a class="rss-button" href="https://feedly.com/i/subscription/feed/{{@site.url}}/rss/" title="RSS" target="_blank" rel="noopener">{{> "icons/rss"}}</a>
+            {{#unless @labs.members}}
+                <a class="rss-button" href="https://feedly.com/i/subscription/feed/{{@site.url}}/rss/" title="RSS" target="_blank" rel="noopener">{{> "icons/rss"}}</a>
+            {{/unless}}
         {{/if}}
 
         {{#if @labs.members}}
