--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -499,10 +499,6 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     fill: #fff;
 }
 
-.social-link-new svg {
-    height: 1.9rem;
-}
-
 .social-link-fb svg {
     height: 1.6rem;
 }
@@ -3053,6 +3049,7 @@ Usage (In Ghost editor):
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
     font-size: 0.8em;
+    outline: 1px solid grey;
 }
 .contact-form input:focus,
 .contact-form textarea:focus {
