--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -182,6 +182,24 @@ body {
     opacity: 0.8;
 }
 
+@media (max-width: 1170px) {
+    .site-description {
+        font-size: 2.1rem;
+    }
+}
+
+@media (max-width: 650px) {
+    .site-description {
+        font-size: 1.7rem;
+    }
+}
+
+@media (max-width: 500px) {
+    .site-description {
+        font-size: 1.5rem;
+    }
+}
+
 /* 4.1 Home header
 /* ---------------------------------------------------------- */
 
@@ -205,6 +223,24 @@ body {
 .site-home-header .site-description {
     font-size: 2.2rem;
     font-weight: 300;
+}
+
+@media (max-width: 1170px) {
+    .site-home-header .site-description {
+        font-size: 2.2rem;
+    }
+}
+
+@media (max-width: 650px) {
+    .site-home-header .site-description {
+        font-size: 1.7rem;
+    }
+}
+
+@media (max-width: 500px) {
+    .site-home-header .site-description {
+        font-size: 1.5rem;
+    }
 }
 
 
@@ -925,7 +961,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 .post-full-header {
     position: relative;
     margin: 0 auto;
-    padding: 70px 170px 50px;
+    padding: 40px 170px 40px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
 }
@@ -949,7 +985,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 
 @media (max-width: 1170px) {
     .post-full-header {
-        padding: 60px 11vw 50px;
+        padding: 30px 11vw 35px;
     }
 }
 
@@ -967,7 +1003,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 }
 
 .post-full-title {
-    margin: 0 0 0.2em;
+    margin: 0 0 0.1em;
     color: color(var(--darkgrey) l(-5%));
 }
 
@@ -991,7 +1027,7 @@ make sure this only happens on large viewports / desktop-ish devices.
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    margin: 25px 0 50px;
+    margin: 0px 0 50px;
     background: color(var(--lightgrey) l(+10%));
     border-radius: 3px;
 }
@@ -1156,7 +1192,7 @@ Usage (In Ghost editor):
 
 .post-full-content blockquote {
     margin: 0 0 1.5em;
-    padding: 0 1.5em;
+    padding: 0 1.0em;
     border-left: #3eb0ef 3px solid;
 }
 @media (max-width: 500px) {
