--- a/index.hbs
+++ b/index.hbs
@@ -8,7 +8,7 @@ into the {body} of the default.hbs template --}}
             {{> "site-nav"}}
             <div class="site-header-content">
                 <h1 id="typewriter" class="site-title"></h1>
-                <h2 class="site-description"><br><strong>Current:</strong> help technology leaders identify growth opportunities at KPMG Strategy. <strong>Past:</strong> growth at early-stage startups, advisor for Series A raisings, founder of Emory's startup incubator. I also occasionally <strong>write</strong> about <a href="https://nparikh.me/tag/trends/">&#x1F387 market trends</a>, <a href="https://nparikh.me/tag/fundings/">&#x1F937 startup fundings</a>, <a href="https://nparikh.me/tag/gtm-strategies/">&#x1F680 go-to-market strategies</a>, and other <a href="https://nparikh.me/tag/other/">&#x1F32F &#x1F4FA &#x1F3B5 stuff</a>.</h2>
+                <h2 class="site-description"><br><strong>Current:</strong> help technology leaders identify growth opportunities at KPMG Strategy. <strong>Past:</strong> growth at early-stage startups, advisor for Series A raisings, founder of Emory's startup incubator.<br><br>&raquo; I also occasionally <strong>write</strong> about <a href="https://nparikh.me/tag/trends/">&#x1F387 market trends</a>, <a href="https://nparikh.me/tag/fundings/">&#x1F937 startup fundings</a>, <a href="https://nparikh.me/tag/gtm-strategies/">&#x1F680 go-to-market strategies</a>, and other <a href="https://nparikh.me/tag/other/">&#x1F32F &#x1F4FA &#x1F3B5 stuff</a>.</h2>
             </div>
         </div>
     </div>
