--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -717,7 +717,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 .post-card-excerpt {
     max-width: 56em;
     color: var(--midgrey);
-    font-family: Georgia, serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .post-card-excerpt p {
@@ -915,7 +915,7 @@ make sure this only happens on large viewports / desktop-ish devices.
     .post-card-large .post-card-excerpt p {
         margin-bottom: 1.5em;
         font-size: 1.8rem;
-        line-height: 1.5em;
+        line-height: 1.4em;
     }
 }
 
@@ -961,7 +961,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 .post-full-header {
     position: relative;
     margin: 0 auto;
-    padding: 40px 170px 40px;
+    padding: 40px 9vw 40px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
 }
@@ -985,7 +985,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 
 @media (max-width: 1170px) {
     .post-full-header {
-        padding: 30px 11vw 35px;
+        padding: 30px 9vw 35px;
     }
 }
 
@@ -1010,8 +1010,8 @@ make sure this only happens on large viewports / desktop-ish devices.
 .post-full-custom-excerpt {
     margin: 20px 0 0;
     color: var(--midgrey);
-    font-family: Georgia, serif;
-    font-size: 2.3rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 1.8rem;
     line-height: 1.4em;
     font-weight: 300;
 }
@@ -1041,29 +1041,30 @@ make sure this only happens on large viewports / desktop-ish devices.
 .post-full-content {
     position: relative;
     margin: 0 auto;
-    padding: 0 170px 6vw;
+    padding: 0 9vw 6vw;
     min-height: 230px;
     font-family: Georgia, serif;
-    font-size: 2.0rem;
-    line-height: 1.6em;
+    line-height: 1.5em;
     background: #fff;
+    font-size: 2.0rem;
 }
 
 @media (max-width: 1170px) {
     .post-full-content {
-        padding: 0 11vw;
+        padding: 0 9vw;
+        font-size: 2.0rem;
     }
 }
 @media (max-width: 800px) {
     .post-full-content {
         padding: 0 5vw;
-        font-size: 1.8rem;
+        font-size: 1.9rem;
     }
 }
 @media (max-width: 500px) {
     .post-full-custom-excerpt {
-        font-size: 1.9rem;
-        line-height: 1.5em;
+        font-size: 1.8rem;
+        line-height: 1.3em;
     }
 }
 
