Changed color scheme for index

--- a/index.hbs
+++ b/index.hbs
@@ -7,9 +7,13 @@ into the {body} of the default.hbs template --}}
         <div class="inner">
             {{> "site-nav"}}
             <div class="site-header-content">
-                <img src="{{asset 'images/face.png'}}" />
-                <h1 id="typewriter" class="site-title"></h1>
-                <h2 class="site-description"><br><strong>Current:</strong> help technology leaders identify growth opportunities at KPMG Strategy. <strong>Past:</strong> growth at early-stage startups, advisor for Series A raisings, founder of Emory's startup incubator.<br><br>&raquo; I also occasionally <strong>write</strong> about <a href="https://nparikh.me/tag/trends/">&#x1F387 market trends</a>, <a href="https://nparikh.me/tag/fundings/">&#x1F937 startup fundings</a>, <a href="https://nparikh.me/tag/gtm-strategies/">&#x1F680 go-to-market strategies</a>, and other <a href="https://nparikh.me/tag/other/">&#x1F32F &#x1F4FA &#x1F3B5 stuff</a>.</h2>
+                <div class="column">
+                    <img src="{{asset 'images/face.png'}}" />
+                </div>
+                <div class="column">
+                    <h1 id="typewriter" class="site-title"></h1>
+                    <h2 class="site-description"><br><strong>Current:</strong> help technology leaders identify growth opportunities at KPMG Strategy. <strong>Past:</strong> growth at early-stage startups, advisor for Series A raisings, founder of Emory's startup incubator.<br><br>&raquo; I also occasionally <strong>write</strong> about <a href="https://nparikh.me/tag/trends/">&#x1F387 market trends</a>, <a href="https://nparikh.me/tag/fundings/">&#x1F937 startup fundings</a>, <a href="https://nparikh.me/tag/gtm-strategies/">&#x1F680 go-to-market strategies</a>, and other <a href="https://nparikh.me/tag/other/">&#x1F32F &#x1F4FA &#x1F3B5 stuff</a>.</h2>
+                </div>
             </div>
         </div>
     </div>
