--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,6 +13,7 @@
     --midgrey: #738a94;
     --lightgrey: #c5d2d9;
     --whitegrey: #e5eff5;
+    --bgcolor: #fcfcfc;
     --pink: #fa3a57;
     --brown: #a3821a;
     --darkmode: color(var(--darkgrey) l(+2%));
