--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -114,7 +114,7 @@ body {
     margin-top: 64px;
     padding-bottom: 12px;
     color: #fff;
-    background: color(var(--darkgrey) l(-5%)) no-repeat center center;
+    background: color(var(--bgcolor) l(-5%)) no-repeat center center;
     background-size: cover;
 }
 
@@ -127,7 +127,7 @@ body {
     left: 0;
     z-index: 10;
     display: block;
-    background: rgba(0,0,0,0.18);
+    background: rgba(0,0,0,0.0);
 }
 
 .site-header-background:after {
@@ -140,7 +140,7 @@ body {
     z-index: 10;
     display: block;
     height: 140px;
-    background: linear-gradient(rgba(0,0,0,0.15),rgba(0,0,0,0));
+    background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0));
 }
 
 .site-header-background.no-image:before,
@@ -215,37 +215,45 @@ body {
     padding: 3vw 3vw 6vw;
 }
 
-.site-home-header .site-header-content img {
-    display: inline-block;
+.site-home-header .site-header-content .column {
+    padding: 10px;
+    flex: 50%;
+}
+
+.site-home-header .site-header-content .column img {
     background: none;
     width: 200px;
     height: 200px;
 }
 
-.site-home-header .site-title {
+.site-home-header .site-header-content .column {
+    flex: 75%;
+}
+
+.site-home-header .site-header-content .column .site-title {
     font-size: 5.5rem;
     text-align: left;
 }
 
-.site-home-header .site-description {
+.site-home-header .site-header-content .column .site-description {
     font-size: 2.2rem;
     font-weight: 300;
 }
 
 @media (max-width: 1170px) {
-    .site-home-header .site-description {
+    .site-home-header .site-header-content .column .site-description {
         font-size: 2.1rem;
     }
 }
 
 @media (max-width: 650px) {
-    .site-home-header .site-description {
+    .site-home-header .site-header-content .column .site-description {
         font-size: 1.7rem;
     }
 }
 
 @media (max-width: 500px) {
-    .site-home-header .site-description {
+    .site-home-header .site-header-content .column .site-description {
         font-size: 1.5rem;
     }
 }
@@ -291,11 +299,11 @@ body {
 }
 
 @media (max-width: 500px) {
-    .site-home-header .site-title {
+    .site-home-header .site-header-content .column .site-title {
         font-size: 3.2rem;
     }
 
-    .site-home-header .site-description {
+    .site-home-header .site-header-content .column .site-description {
         font-size: 1.8rem;
     }
 
@@ -347,7 +355,6 @@ body {
 .site-header-background:not(.responsive-header-img) .site-nav-left-wrapper:after,
 .site-nav-main .site-nav-left-wrapper:after {
     right: 0;
-    background: linear-gradient(to right, color(var(--darkgrey) l(-5%) a(0)) 0%,color(var(--darkgrey) l(-5%)) 100%);
 }
 
 .site-nav-left {
@@ -438,6 +445,10 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     transition: opacity 0.35s ease-in-out;
 }
 
+.site-header-background:not(.responsive-header-img) .nav li a {
+    color: var(--darkgrey);
+}
+
 .nav li a:hover {
     text-decoration: none;
     opacity: 1;
@@ -453,6 +464,10 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     background: #fff;
     opacity: 0.25;
     transition: all 0.35s ease-in-out;
+}
+
+.site-header-background:not(.responsive-header-img) .nav li a:before {
+    background: var(--darkgrey);
 }
 
 .nav li a:hover:before {
@@ -540,6 +555,10 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 .social-link svg {
     height: 1.8rem;
     fill: #fff;
+}
+
+.site-header-background:not(.responsive-header-img) .social-link svg {
+    fill: var(--darkgrey);
 }
 
 .social-link-fb svg {
