--- a/index.hbs
+++ b/index.hbs
@@ -7,10 +7,11 @@ into the {body} of the default.hbs template --}}
         <div class="inner">
             {{> "site-nav"}}
             <div class="site-header-content">
-                <div class="column">
-                    <img src="{{asset 'images/face.png'}}" />
+                <div class="left-col">
+                    <img id="breathing-halftone" src="{{asset 'images/face-removebg.jpg'}}" />
                 </div>
-                <div class="column">
+                <div class="right-col">
+                    <h2 class="site-supertitle">Hi, my name is ...</h2>
                     <h1 id="typewriter" class="site-title"></h1>
                     <h2 class="site-description"><br><strong>Current:</strong> help technology leaders identify growth opportunities at KPMG Strategy. <strong>Past:</strong> growth at early-stage startups, advisor for Series A raisings, founder of Emory's startup incubator.<br><br>&raquo; I also occasionally <strong>write</strong> about <a href="https://nparikh.me/tag/trends/">&#x1F387 market trends</a>, <a href="https://nparikh.me/tag/fundings/">&#x1F937 startup fundings</a>, <a href="https://nparikh.me/tag/gtm-strategies/">&#x1F680 go-to-market strategies</a>, and other <a href="https://nparikh.me/tag/other/">&#x1F32F &#x1F4FA &#x1F3B5 stuff</a>.</h2>
                 </div>
@@ -40,6 +41,7 @@ into the {body} of the default.hbs template --}}
 {{!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs --}}
 {{#contentFor "scripts"}}
 <script src='{{asset "js/core.js"}}'></script>
+<script src='{{asset "js/breathing-halftone.js"}}'></script>
 <script type="text/javascript">
     const typewriter = new Typewriter('#typewriter', {
       loop: false,
@@ -50,6 +52,23 @@ into the {body} of the default.hbs template --}}
       .pauseFor(200)
       .typeString(" Parikh ")
       .start();
+
+    var face_img = document.querySelector('#breathing-halftone');
+
+    new BreathingHalftone(face_img, {
+        dotSize: 1/140,
+        dotSizeThreshold: 0.01,
+        initVelocity: 0.03,
+        oscPeriod: 3,
+        oscAmplitude: 0.3,
+        channels: [ 'lum' ],
+        friction: 0.1,
+        hoverDiameter: 0.4,
+        hoverForce: 0.01,
+        activeDiameter: -0.4,
+        activeForce: 0.004
+    });
+
 </script>
 <script>
 
