Small formatting tweaks

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,7 +13,7 @@
     --midgrey: #738a94;
     --lightgrey: #c5d2d9;
     --whitegrey: #e5eff5;
-    --bgcolor: #fafafc;
+    --bgcolor: #f8f8fa;
     --pink: #fa3a57;
     --brown: #a3821a;
     --darkmode: color(var(--darkgrey) l(+2%));
