--- a/index.hbs
+++ b/index.hbs
@@ -58,11 +58,10 @@ into the {body} of the default.hbs template --}}
     new BreathingHalftone(face_img, {
         dotSize: 1/140,
         dotSizeThreshold: 0.01,
-        initVelocity: 0.03,
-        oscPeriod: 3,
-        oscAmplitude: 0.3,
-        channels: [ 'lum' ],
-        friction: 0.1,
+        initVelocity: 0.7,
+        oscPeriod: 2,
+        channels: [ 'red', 'green', 'blue' ],
+        friction: 0.25,
         hoverDiameter: 0.4,
         hoverForce: 0.01,
         activeDiameter: -0.4,
