--- a/index.hbs
+++ b/index.hbs
@@ -13,7 +13,7 @@ into the {body} of the default.hbs template --}}
                 <div class="right-col">
                     <h2 class="site-supertitle">Hi, my name is ...</h2>
                     <h1 id="typewriter" class="site-title"></h1>
-                    <h2 class="site-description"><br><strong>Current:</strong> help technology leaders identify growth opportunities at KPMG Strategy. <strong>Past:</strong> growth at early-stage startups, advisor for Series A raisings, founder of Emory's startup incubator.<br><br>&raquo; I also occasionally <strong>write</strong> about <a href="https://nparikh.me/tag/trends/">&#x1F387 market trends</a>, <a href="https://nparikh.me/tag/fundings/">&#x1F937 startup fundings</a>, <a href="https://nparikh.me/tag/gtm-strategies/">&#x1F680 go-to-market strategies</a>, and other <a href="https://nparikh.me/tag/other/">&#x1F32F &#x1F4FA &#x1F3B5 stuff</a>.</h2>
+                    <h2 class="site-description"><br><strong>Current:</strong> help technology leaders identify growth opportunities at KPMG Strategy. <strong>Past:</strong> growth at early-stage startups, advisor for Series A raisings, founder of Emory's startup incubator.<br><br>&raquo; I also occasionally write about <strong><a href="https://nparikh.me/tag/trends/">&#x1F387 market trends</a></strong>, <strong><a href="https://nparikh.me/tag/fundings/">&#x1F937 startup fundings</a></strong>, <strong><a href="https://nparikh.me/tag/gtm-strategies/">&#x1F680 go-to-market strategies</a></strong>, and other <strong><a href="https://nparikh.me/tag/other/">&#x1F32F &#x1F4FA &#x1F3B5 stuff</a></strong>.</h2>
                 </div>
             </div>
         </div>
