--- a/index.hbs
+++ b/index.hbs
@@ -8,7 +8,7 @@ into the {body} of the default.hbs template --}}
             {{> "site-nav"}}
             <div class="site-header-content">
                 <div class="left-col">
-                    <img style="filter:opacity(90%);" id="breathing-halftone" src="{{asset 'images/face1.jpg'}}" />
+                    <img id="breathing-halftone" src="{{asset 'images/face2.png'}}" />
                 </div>
                 <div class="right-col">
                     <h2 class="site-supertitle">Hi, my name is ...</h2>
