Edited tag partial

--- a/partials/tag-card.hbs
+++ b/partials/tag-card.hbs
@@ -26,7 +26,7 @@
 
             <section class="post-card-excerpt">
                 <p>{{description}}</p>
-                <p>A collection of {{plural count.posts empty='posts' singular='% post' plural='% posts'}}</p>
+                <!-- <p>A collection of {{plural count.posts empty='posts' singular='% post' plural='% posts'}}</p> -->
             </section>
 
         </a>
