--- a/custom-writing.hbs
+++ b/custom-writing.hbs
@@ -12,7 +12,7 @@
     <div class="inner site-header-content">
         <h1 class="site-title">Writing</h1>
         <h2 class="site-description">
-            I love to discuss to all things technology so feel free to <a href="https://nparikh.me/contact/">reach out</a>!
+            I love to discuss to all things technology, so feel free to <a href="https://nparikh.me/contact/">reach out</a>!
         </h2>
     </div>
     </div>
