--- a/default.hbs
+++ b/default.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{@site.lang}}">
+<html lang="{{@site.locale}}">
 <head>
 
     {{!-- Document Settings --}}
@@ -70,8 +70,6 @@
 
     </div>
 
-    {{!-- The big email subscribe modal content --}}
-    {{#if @labs.members}}
     <div class="subscribe-success-message">
         <a class="subscribe-close" href="javascript:;"></a>
         You've successfully subscribed to {{@site.title}}!
@@ -106,7 +104,6 @@
             </div>
         </div>
     </div>
-    {{/if}}
 
     {{!-- jQuery, required for fitvids --}}
     <script
